--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+
 *{
   margin: 0;
   padding: 0;
 }
+/* body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #ffdd00;
+} */
+
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: linear-gradient(45deg, #FFD700, #FFA500, #FFEA00); */
+  background: linear-gradient(90deg, #ffe100, #ffbf00, #ffaa00);
+  background-size: 800% 800%;
+  animation: gradientBG 10s ease-in-out infinite;
+  height: 100vh;
+  margin: 0;
 }
+
+@keyframes gradientBG {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+} 
+ 
+
 
 .container {
   max-width: 600px;
   margin: auto;
   padding: 0 1rem;
 }
+
+.title {
+  font-size: 5rem;
+  text-align: center;
+  margin-top: 3rem;
+  color: #583502;
+  /* font-family: 'Noto Sans Devanagari'; */
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  /* border-color: #fff; */
+}
+
+
+.hindi {
+  font-family: 'Baloo 2', cursive;
+  color: #583502;
+}
+.english {
+  font-family: 'Baloo 2', cursive;
+  color: #583502;;
+}
+
 
 h1 {
   margin-top: 1rem;
@@ -33,23 +89,33 @@ input {
   outline: none;
   width: 400px;
   padding: 0.5rem;
-  border-bottom: 1px solid #000;
+  /* border: 1px solid #000; */
+  border-radius: 50px;
+  font-size: 1.2rem;
+  background-color: #ffffff;
+  margin-bottom: 1rem;
+
 }
 
 .add {
-  background-color: #000;
+  background-color: #583502;
   color: #fff;
+  border-radius: 50px;
   padding: 0.5rem 1.5rem;
   cursor: pointer;
-}
+  margin-bottom: 1rem;
 
+}
+/* #563901; */
+/* #75520d */
 .todo {
   position: relative;
+  border-radius: 50px;
   margin-top: 1rem;
-  background-color: #000;
+  background-color: #583502;
   color: white;
-  padding: 1.5rem 3rem;
-  border-radius: 5px;
+  padding: 1rem 3rem;
+  font-size: 1.2rem;
 }
 
 .icons {
